--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.1",
+    "autoprefixer": "^10.4.17",
     "next": "15.2.0",
+    "postcss": "^8.4.35",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
@@ -22,7 +24,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
-    "tailwindcss": "^4",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
