--- a/package.json
+++ b/package.json
@@ -9,22 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.49.1",
+    "@supabase/ssr": "^0.5.2",
+    "@supabase/supabase-js": "^2.39.7",
     "autoprefixer": "^10.4.17",
-    "next": "15.2.0",
+    "next": "^15.2.0",
     "postcss": "^8.4.35",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.2.0",
-    "supabase": "^2.15.8",
+    "eslint-config-next": "^15.2.0",
+    "supabase": "^1.142.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
