--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.39.7",
     "autoprefixer": "^10.4.17",
+    "date-fns": "^4.1.0",
     "next": "^15.2.0",
     "postcss": "^8.4.35",
     "react": "^19.0.0",
