--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@supabase/supabase-js": "^2.39.7",
     "autoprefixer": "^10.4.17",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "next": "^15.2.0",
     "postcss": "^8.4.35",
     "react": "^19.0.0",
