--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "next": "^15.2.0",
+    "pdf-lib": "^1.17.1",
     "postcss": "^8.4.35",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
