--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.39.7",
+    "@types/react-datepicker": "^6.2.0",
     "autoprefixer": "^10.4.17",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
@@ -20,6 +21,7 @@
     "pdf-lib": "^1.17.1",
     "postcss": "^8.4.35",
     "react": "^19.0.0",
+    "react-datepicker": "^8.2.1",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2"
   },
