--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "^15.2.0",
+    "sharp": "^0.33.5",
     "supabase": "^1.142.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
